[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/item.gd" type="Script" id=1]
[ext_resource path="res://assets/buttons/blue_button11.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/green_sliderLeft.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/red_cross.png" type="Texture" id=4]

[node name="Item" type="Node2D"]
script = ExtResource( 1 )

[node name="HideActionsButton" type="Button" parent="."]
margin_right = 125.0
margin_bottom = 115.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 62.3371, 58.156 )
scale = Vector2( 2.57678, 2.41474 )
texture = ExtResource( 2 )

[node name="Content" type="Label" parent="."]
margin_left = 7.79596
margin_top = 12.1868
margin_right = 126.796
margin_bottom = 105.187
text = "this is the first line of your new adventure so I hope you are ready because this is gonna be awesome"
align = 1
autowrap = true
max_lines_visible = 5

[node name="Actions" type="Node2D" parent="."]
visible = false
position = Vector2( 65.8822, 64.5776 )

[node name="EditButton" type="TextureButton" parent="Actions"]
margin_left = 68.2331
margin_top = -58.8919
margin_right = 107.233
margin_bottom = -27.8919
texture_normal = ExtResource( 3 )

[node name="ClearButton" type="TextureButton" parent="Actions"]
margin_left = 74.2317
margin_top = -24.281
margin_right = 105.232
margin_bottom = 6.71896
texture_normal = ExtResource( 4 )
expand = true

[node name="EditContent" type="TextEdit" parent="Actions"]
visible = false
margin_left = -87.0
margin_top = 70.0
margin_right = 198.0
margin_bottom = 122.0
[connection signal="pressed" from="HideActionsButton" to="." method="_on_HideActions_Button_pressed"]
[connection signal="pressed" from="Actions/EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="Actions/ClearButton" to="." method="_on_ClearButton_pressed"]
